# 1brc

./: .gitignore  .gitmodules  1brc.cpp  README.mc  README.md
src/: 1brc.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  build.sh  cmake_install.cmake  compile_commands.json  v1_baseline.cpp  v3_readline.cpp  v4_refactor.cpp
