cmake_minimum_required(VERSION 3.18.1)
project(1brc CXX)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_STANDARD_REQUIRED True)

if (CMAKE_BUILD_TYPE STREQUAL "Debug")
    add_compile_options(-pedantic -Wall -Wextra -O1 -march=native -fno-omit-frame-pointer)
endif()
if (CMAKE_BUILD_TYPE STREQUAL "Release")
    add_compile_options(-pedantic -Wall -Wextra -O3 -march=native -g0 -DNDEBUG -fomit-frame-pointer)
endif()
if (CMAKE_BUILD_TYPE STREQUAL "RelWithDebInfo")
    add_compile_options(-pedantic -Wall -Wextra -O3 -march=native -fno-omit-frame-pointer -ggdb3)
endif()

add_executable(v1_baseline v1_baseline.cpp)
add_executable(v3_readline v3_readline.cpp)
add_executable(v4_refactor v4_refactor.cpp)
